# macro_context_reader

./: .env.example  .gitignore  .gitmessage  AUDIT_CC155.md  AUDIT_DIVERGENCE.md  AUDIT_SNAPSHOT.md  CHANGELOG.md  CITATION.cff  CITATION.md  CLAUDE.md  INSPECT_REGIME_CONDITIONAL.md  PROJECT_STATE.md  README.md  ROADMAP.md  fomc_macro_research.md  pyproject.toml  start_dev.bat
audit/: STATE_AUDIT_001.md  STATE_AUDIT_002.md
config/: regime_thresholds.yaml
data/divergence/: calibration_features.parquet  calibration_features_report.md  calibration_features_v3.parquet  experiment_report.md  experiment_results.parquet  experiment_v2_report.md  experiment_v2_results.parquet  experiment_v3_report.md  experiment_v3_results.parquet  targets.parquet  targets_v2.parquet
data/economic_sentiment/: cleveland_fed_indices.csv  cleveland_fed_indices.parquet
data/market_pricing/: eurusd_daily.parquet  fedwatch_surprise.parquet  fedwatch_surprise_mpt_only.parquet  real_rate_differential.parquet
data/positioning/: cot_eur.parquet
data/rhetoric/: fomc_scores.parquet
decisions/: DEC-001-switch-to-5y-horizon.md  DEC-002-dual-eur-yield-curves.md  DEC-003-us-rates-source-dfii5.md  DEC-004-eu-inflation-source-spf.md  DEC-005-ac6-reformulation-regime-conditional.md  DEC-006-empirical-regime-classification.md  DEC-007-full-history-scaler-scope.md  DEC-008-hmm-diag-covariance-bic-ari-grid.md  DEC-009-regime-switching-correlation.md  DEC-010-session-workflow-batch-docs.md  DEC-011-api-change-protocol-notebook-sync.md  README.md
docs/: ARCHITECTURE.md  DATA_REFRESH.md  ONBOARDING.md  WORKFLOW.md
lessons/: LESSONS-001-prd-200-retrospective.md  README.md
notebooks/: 00_setup.ipynb  01_layer1_rhetoric.ipynb  01_regime_classifier_validation.ipynb  02_layer2_market_pricing.ipynb  02b_layer2_regime_diagnostic.ipynb  03_layer3_divergence.ipynb  03_regime_conditional_diagnostic.ipynb  04_layer4_positioning.ipynb  04_rhetoric_scoring_validation.ipynb  04a_layer4_cot_leveraged_funds_diagnostic.ipynb  05_economic_sentiment_validation.ipynb  05_live_pipeline.ipynb  07_nlp_backfill_colab.ipynb  BOOTSTRAP_TEMPLATE.md  _bootstrap.py  debug_finbert_inspection.ipynb
prds/: PRD-001.md  PRD-002.md  PRD-050.md  PRD-051.md  PRD-101.md  PRD-102.md  PRD-200.md  PRD-202.md  PRD-300.md  PRD-301.md  PRD-400.md  PRD-401.md  PRD-500.md
prds/archived/: PRD-202-tactical-superseded.md  (+1 more)
research/: ECB_FEASIBILITY_001.md  INFLATION_EXPECTATIONS_METHODS.md
scripts/: apply_cell_ids.py  debug_llama_disagreement.py  rewrite_notebook_05.py  test_apply_cell_ids.py
(+181 files in other folders)
